lab3/k8s/config.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: root-service
            port:
              number: 8080
      - path: /api/some-api-service/
        pathType: Prefix
        backend:
          service:
            name: some-api-service
            port:
              number: 8080
      - path: /api/dbc-service/
        pathType: Prefix
        backend:
          service:
            name: dbc-service
            port:
              number: 8080
